--- a/XmasCassie/XmasCassie.csproj
+++ b/XmasCassie/XmasCassie.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -32,16 +32,16 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Assembly-CSharp">
-      <HintPath>C:\Users\SystemX\Desktop\Файлы\Файлы\Хуйня какая-то\Assembly-CSharp.dll</HintPath>
+      <HintPath>..\..\..\..\OneDrive\Рабочий стол\Libs\Assembly-CSharp.dll</HintPath>
     </Reference>
     <Reference Include="Assembly-CSharp-firstpass">
-      <HintPath>C:\Users\SystemX\Desktop\Файлы\Файлы\Хуйня какая-то\Assembly-CSharp-firstpass.dll</HintPath>
+      <HintPath>..\..\..\..\OneDrive\Рабочий стол\Libs\Assembly-CSharp-firstpass.dll</HintPath>
     </Reference>
     <Reference Include="Exiled.API">
-      <HintPath>C:\Users\SystemX\Desktop\Файлы\Файлы\Хуйня какая-то\Exiled.API.dll</HintPath>
+      <HintPath>..\..\..\..\OneDrive\Рабочий стол\Libs\Exiled.API.dll</HintPath>
     </Reference>
     <Reference Include="Exiled.Events">
-      <HintPath>C:\Users\SystemX\Desktop\Файлы\Файлы\Хуйня какая-то\Exiled.Events.dll</HintPath>
+      <HintPath>..\..\..\..\OneDrive\Рабочий стол\Libs\Exiled.Events.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -52,7 +52,7 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="UnityEngine.CoreModule">
-      <HintPath>C:\Users\SystemX\Desktop\Файлы\Файлы\Хуйня какая-то\UnityEngine.CoreModule.dll</HintPath>
+      <HintPath>..\..\..\..\OneDrive\Рабочий стол\Libs\UnityEngine.CoreModule.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
